contact page, about us

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "lightgallery/css/lightgallery.css";
 @import "magnific-popup/dist/magnific-popup.css";
 @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
-@import "bootstrap-icons/font/bootstrap-icons";
+// @import "bootstrap-icons/font/bootstrap-icons";
 @import "star-rating.js/dist/star-rating.css";
 
 // Your CSS partials
