--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -7,8 +7,8 @@
 .cn-info-detail {
   position: relative;
   margin-bottom: 1.5rem;
+  justify-content: start;
   display: flex;
-  justify-content: end;
   align-items: center;
 }
 .cn-info-icon {
