--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -11,9 +11,12 @@ $headers-font: "Jost", "Helvetica", "sans-serif";
 
 @font-face {
   font-family: "bootstrap-icons";
-  src: font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff2")
-      format("woff2"),
-    font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+  // src: font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff2")
+  //     format("woff2"),
+  //   font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+    src:font-url('bootstrap-icons.woff2');
+    src:font-url('bootstrap-icons.woff');
+
 }
 
 // To use a font file (.woff) uncomment following lines
