--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -6,8 +6,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h2 class="ipt-title">About Us</h2>
-        <span class="ipn-subtitle">Who we are & our mission</span>
+        <h2 class="ipt-title">Qui som</h2>
+        <span class="ipn-subtitle">Agència immobiliària</span>
       </div>
     </div>
   </div>
@@ -16,171 +16,40 @@
 <!-- ============================ Our Story Start ================================== -->
 <section>
   <div class="container">
-    <!-- row Start -->
-    <div class="row align-items-center">
-      <div class="col-lg-6 col-md-6">
-        <img src="https://via.placeholder.com/700x850" class="img-fluid" alt="" />
-      </div>
-      <div class="col-lg-6 col-md-6">
-        <div class="story-wrap explore-content">
-          <h2>Our Story</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <div class="agency agency-list overlio-40">
+          <div class="agency-avatar">
+            <img src="https://res.cloudinary.com/dlzusxobf/image/upload/v1673870864/6_opiao7.png" alt="">
+          </div>
+          <div class="agency-content">
+            <div class="agency-name">
+              <h4><a href="agency-page.html">Sistach Finques</a></h4>
+              <span><i class="fas fa-location-dot"></i>Estartit</span>
+              <span><i class="fas fa-location-dot"></i>Barcelona</span>
+              <span><i class="fas fa-location-dot"></i>Berga</span>
+            </div>
+            <div class="agency-desc">
+              <p>Agent de la Propietat Immobiliària API 1009 / AICAT 6541.
+                <p>
+                  Finques Sistach és una empresa especialitzada en la gestió immobiliària amb l'activitat principal a la Costa Brava, Barcelona i Berga, reconeguda per la professionalitat, serietat i solvència.</p>
+                <p> Ens comprometem a oferir als nostres clients un servei adaptat a les seves necessitats.</p>
+              </div>
+              <div class="clearfix"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- /row -->
-  </div>
-</section>
-<!-- ============================ Our Story End ================================== -->
-<!-- ================= Our Team================= -->
-<section class="gray-bg">
+  </section>
+  <!-- ============================ Our Story End ================================== -->
+  <!-- ================= Our Mission ================= -->
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
         <div class="sec-heading center">
-          <h2>Meet Our Team</h2>
-          <p>Professional & Dedicated Team</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="team-slide item-slide">
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Shaurya Preet</h4>
-                <span>Co-Founder</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Shivangi Preet</h4>
-                <span>Content Writer</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Yash Preet</h4>
-                <span>Content Writer</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Dhananjay Preet</h4>
-                <span>CEO & Manager</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Rahul Gilkrist</h4>
-                <span>App Designer</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Teamm -->
-          <div class="single-team">
-            <div class="team-grid">
-              <div class="teamgrid-user">
-                <img src="https://via.placeholder.com/400x400" alt="" class="img-fluid" />
-              </div>
-              <div class="teamgrid-content">
-                <h4>Adam Wilcard</h4>
-                <span>Web Developer</span>
-              </div>
-              <div class="teamgrid-social">
-                <ul>
-                  <li><a href="#" class="f-cl"><i class="ti-facebook"></i></a></li>
-                  <li><a href="#" class="t-cl"><i class="ti-twitter"></i></a></li>
-                  <li><a href="#" class="i-cl"><i class="ti-instagram"></i></a></li>
-                  <li><a href="#" class="l-cl"><i class="ti-linkedin"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- =============================== Our Team ================================== -->
-<!-- ================= Our Mission ================= -->
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-        <div class="sec-heading center">
-          <h2>Our Mission & Work Process</h2>
-          <p>Professional & Dedicated Team</p>
+          <h2>Serveis pels propietaris</h2>
+          <p>Un equip professional i dedicat</p>
         </div>
       </div>
     </div>
@@ -189,29 +58,49 @@
         <div class="icon-mi-left">
           <i class="ti-lock theme-cl"></i>
           <div class="icon-mi-left-content">
-            <h4>Fully Secure & 24x7 Dedicated Support</h4>
-            <p>If you are an individual client, or just a business startup looking for good backlinks for your website.</p>
+            <h4>El nostre equip està format per consultors immobiliaris experimentats i dedicats.</h4>
+            <p>Els nostres especialistes estan formats per ajudar-lo en la recerca d'un nou apartament o casa mitjançant tecnologies innovadores. Oferim als nostres clients una àmplia gamma de serveis que inclouen:
+              Identificació de propietats en venda i lloguer;
+              Fer una avaluació precisa del valor d'una propietat determinada;
+              Fer suggeriments sobre com millorar-lo;
+              Prestar assistència jurídica en la compra o venda de béns immobles;</p>
           </div>
         </div>
         <div class="icon-mi-left">
           <i class="ti-twitter theme-cl"></i>
           <div class="icon-mi-left-content">
-            <h4>Manage your Social & Busness Account Carefully</h4>
-            <p>If you are an individual client, or just a business startup looking for good backlinks for your website.</p>
-          </div>
-        </div>
-        <div class="icon-mi-left">
-          <i class="ti-layers theme-cl"></i>
-          <div class="icon-mi-left-content">
-            <h4>We are Very Hard Worker and loving</h4>
-            <p>If you are an individual client, or just a business startup looking for good backlinks for your website.</p>
+            <h4>Entenem el mercat.</h4>
+            <p>Els nostres experimentats agents immobiliaris coneixen el mercat i poden trobar el comprador adequat per a la seva propietat. Coneixem la comunitat i coneixem el mercat immobiliari local. Això ens ajuda a determinar el valor de la vostra propietat i us permetrà prendre una decisió informada sobre la venda.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-6 col-md-6">
-        <img src="https://via.placeholder.com/700x850" class="img-fluid" alt="" />
+        <img src="https://res.cloudinary.com/dlzusxobf/image/upload/v1673873897/10_qs1dcl.png" class="img-fluid" alt="" />
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-lg-6 col-md-6">
+        <img src="https://res.cloudinary.com/dlzusxobf/image/upload/v1673870864/1_t4b5ql.png" class="img-fluid" alt="" />
+      </div>
+      <div class="col-lg-6 col-md-6">
+        <div class="icon-mi-left">
+          <i class="ti-layers theme-cl"></i>
+          <div class="icon-mi-left-content">
+            <h4>La nostra xarxa està a la vostra disposició.</h4>
+            <p>Tenim una àmplia i activa xarxa d'agències immobiliàries i corredors amb els quals treballem. Això significa que podem arribar a un gran nombre de possibles compradors o llogaters de la vostra propietat. </p>
+            <p>
+              Les habilitats tècniques del nostre equip garantiran que tots els aspectes administratius de la venda o lloguer del seu immoble es facin correctament, com ara la redacció de contractes, fotografies i descripcions en llocs web, comunicació amb agents, etc.</p>
+          </div>
+        </div>
+        <div class="icon-mi-left">
+          <i class="ti-lock theme-cl"></i>
+          <div class="icon-mi-left-content">
+            <h4>La vostra propietat es presentarà amb la millor llum als compradors.</h4>
+            <p>Publicarem el teu immoble a la nostra web, així com a les millors plataformes d'anuncis immobiliaris. Utilitzarem totes les eines a la nostra disposició perquè la teva propietat vegi el màxim possible de compradors potencials.
+              En cas que preferiu fer una oferta privada només a uns quants inversors seleccionats, podem utilitzar mètodes més tradicionals utilitzats per les agències immobiliàries (com ara el correu directe) i garantir la confidencialitat.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</section>
-<!-- ================= Our Mission ================= -->
+  <!-- ================= Our Mission ================= -->
