--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h2 class="ipt-title">Our Articles</h2>
-        <span class="ipn-subtitle">See Our Latest Articles & News</span>
+        <h2 class="ipt-title">Notícies</h2>
+        <span class="ipn-subtitle">Les últimes notícies del sector</span>
       </div>
     </div>
   </div>
