--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,121 +1,106 @@
       <!-- ============================ Footer Start ================================== -->
-      <footer class="dark-footer skin-dark-footer">
-        <div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3 col-md-4">
-                <div class="footer-widget">
-                  <img
-                    src="assets/images/logo-light.png"
-                    class="img-footer"
-                    alt=""
-                  />
-                  <div class="footer-add">
-                    <p>Collins Street West, Victoria 8007, Australia.</p>
-                    <p>+1 246-345-0695</p>
-                    <p>info@example.com</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-2 col-md-4">
-                <div class="footer-widget">
-                  <h4 class="widget-title">Navigations</h4>
-                  <ul class="footer-menu">
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="faq.html">FAQs Page</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-2 col-md-4">
-                <div class="footer-widget">
-                  <h4 class="widget-title">The Highlights</h4>
-                  <ul class="footer-menu">
-                    <li><a href="#">Apartment</a></li>
-                    <li><a href="#">My Houses</a></li>
-                    <li><a href="#">Restaurant</a></li>
-                    <li><a href="#">Nightlife</a></li>
-                    <li><a href="#">Villas</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-2 col-md-6">
-                <div class="footer-widget">
-                  <h4 class="widget-title">My Account</h4>
-                  <ul class="footer-menu">
-                    <li><a href="#">My Profile</a></li>
-                    <li><a href="#">My account</a></li>
-                    <li><a href="#">My Property</a></li>
-                    <li><a href="#">Favorites</a></li>
-                    <li><a href="#">Cart</a></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6">
-                <div class="footer-widget">
-                  <h4 class="widget-title">Download Apps</h4>
-                  <a href="#" class="other-store-link">
-                    <div class="other-store-app">
-                      <div class="os-app-icon">
-                        <i class="lni-playstore theme-cl"></i>
-                      </div>
-                      <div class="os-app-caps">
-                        Google Play
-                        <span>Get It Now</span>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="#" class="other-store-link">
-                    <div class="other-store-app">
-                      <div class="os-app-icon">
-                        <i class="lni-apple theme-cl"></i>
-                      </div>
-                      <div class="os-app-caps">
-                        App Store
-                        <span>Now it Available</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
+<footer class="dark-footer skin-dark-footer">
+  <div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="footer-widget">
+            <%= image_tag("logo_light", class: "img-footer", alt: "Sistach Finques") %>
+            <div class="footer-add">
             </div>
           </div>
         </div>
-
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-lg-6 col-md-6">
-                <p class="mb-0">
-                  © 2021 Resido. Designd By
-                  <a href="https://themezhub.com">Themez Hub</a> All Rights
-                  Reserved
-                </p>
-              </div>
-
-              <div class="col-lg-6 col-md-6 text-right">
-                <ul class="footer-bottom-social">
-                  <li>
-                    <a href="#"><i class="ti-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="ti-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="ti-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="ti-linkedin"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="footer-widget">
+            <h4 class="widget-title">Oficina Estartit</h4>
+            <ul class="footer-menu">
+              <li> Carrer de l'Església 34, local</li>
+              <li>17257 L'Estartit (Girona)</li>
+              <li><a href="tel:972100381">972 100 381</a></li>
+              <li><a href="mailto:info@sistachfinques.com">info@sistachfinques.com</a></li>
+            </ul>
           </div>
         </div>
-      </footer>
-      <!-- ============================ Footer End ================================== -->
+        <div class="col-lg-3 col-md-4">
+          <div class="footer-widget">
+            <h4 class="widget-title">Oficina Berga</h4>
+            <ul class="footer-menu">
+              <li>C/Roser 1, 1-2</li>
+              <li>08600 Berga (Barcelona)</li>
+              <li><a href="tel:931147100">931 147 100</a></li>
+              <li><a href="mailto:info@sistachfinques.com">info@sistachfinques.com</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="footer-widget">
+            <h4 class="widget-title">Oficina Barcelona</h4>
+            <ul class="footer-menu">
+              <li>C/Rosselló 439, local</li>
+              <li>08025 Barcelona (Barcelona)</li>
+              <li><a href="tel:931147100">931 147 100</a></li>
+              <li><a href="mailto:info@sistachfinques.com">info@sistachfinques.com</a></li>
+            </ul>
+          </div>
+        </div>
+        <!--
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-widget">
+            <h4 class="widget-title">Download Apps</h4>
+            <a href="#" class="other-store-link">
+              <div class="other-store-app">
+                <div class="os-app-icon">
+                  <i class="lni-playstore theme-cl"></i>
+                </div>
+                <div class="os-app-caps">
+                  Google Play
+                  <span>Get It Now</span>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="other-store-link">
+              <div class="other-store-app">
+                <div class="os-app-icon">
+                  <i class="lni-apple theme-cl"></i>
+                </div>
+                <div class="os-app-caps">
+                  App Store
+                  <span>Now it Available</span>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        -->
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-6">
+          <p class="mb-0">
+            ©  <%= Date.current.year %> Sistach Finques | <a href="/avis-legal">Avís legal | Política de privacitat</a>
+          </p>
+        </div>
+        <div class="col-lg-6 col-md-6 text-right">
+          <ul class="footer-bottom-social">
+            <li>
+              <a href="#"><i class="ti-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ti-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ti-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ti-linkedin"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- ============================ Footer End ================================== -->
