--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
       <div class="col-lg-9 col-md-11 col-sm-12">
         <div class="inner-banner-text text-center">
           <p class="lead-i text-white">Cerca propietats en venda i lloguer a Catalunya <span class="badge badge-success">Veure tot</span></p>
-          <h2><span class="font-normal text-white">Troba la casa</span> que t'espera.</h2>
+          <h2><span class="font-normal text-white">Troba la casa</span> <span data-controller="typed-js"></span></h2>
         </div>
         <div class="full-search-2 eclip-search italian-search hero-search-radius shadow-hard mt-5">
           <div class="hero-search-content">
@@ -98,7 +98,7 @@
                     <span class="property-type"><%= realestate.salesprice.present? ? "En Venda" : "En lloguer" %></span>
                   </div>
                   <div class="listing-short-detail-flex">
-                    <h6 class="listing-card-info-price"><%= number_to_currency(realestate.salesprice, unit: "€", separator: ",", delimiter: ".", precision: 2).delete(' ') || number_to_currency(realestate.rentprice, unit: "€", separator: ",", delimiter: ".", precision: 2).delete(' ') %></h6>
+                    <h6 class="listing-card-info-price"><%= number_to_currency(realestate.salesprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ') || number_to_currency(realestate.rentprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ') %></h6>
                   </div>
                 </div>
               </div>
