--- a/app/views/realestates/_realestates.html.erb
+++ b/app/views/realestates/_realestates.html.erb
@@ -1,19 +1,19 @@
-<%# turbo_frame_tag "realestates", data: {turbo_action: "advance" } do %>
 <div class="row justify-content-center">
   <div class="col-lg-12 col-md-12">
     <div class="item-shorting-box">
       <div class="item-shorting clearfix">
-        <div class="left-column pull-left"><h4 class="m-0">Trobat 1-10 de 42 resultats</h4>
-        <%= @pagy.items %>
-        <%= @pagy.params[:page] %>
+        <div class="left-column pull-left">
+          <h4 class="m-0">Trobat 1-10 de 42 resultats</h4>
+          <%= @pagy.items %>
+          <%= @pagy.params[:page] %>
         </div>
       </div>
       <div class="item-shorting-box-right">
         <ul class="shorting-list">
           <li>
-          <%= link_to index_map_realestates_path, target: "_blank" do %>
-            <i class="fas fa-map-marked"></i>
-          <% end %>
+            <%= link_to index_map_realestates_path, target: "_blank" do %>
+              <i class="fas fa-map-marked"></i>
+            <% end %>
           </li>
         </ul>
       </div>
@@ -59,9 +59,9 @@
 <!-----------------------------End Filter----------------------------->
 <!-- Tots els immobles -->
 <div class="row">
-    <% realestates.each do |realestate| %>
-      <%= render realestate %>
-    <% end %>
+  <% realestates.each do |realestate| %>
+    <%= render realestate %>
+  <% end %>
 </div>
 <!-- End Tots els immobles -->
 <!-- Pagination -->
@@ -69,4 +69,3 @@
   <%== pagy_bootstrap_nav(@pagy) %>
 </div>
 <!-- End Pagination -->
-<%# end %>
