--- a/app/views/realestates/index.html.erb
+++ b/app/views/realestates/index.html.erb
@@ -20,7 +20,8 @@
         <div class="simple-sidebar sm-sidebar" id="filter_search"  style="left:0;">
           <div class="search-sidebar_header">
             <h4 class="ssh_heading">Close Filter</h4>
-            <button onclick="closeFilterSearch()" class="w3-bar-item w3-button w3-large"><i class="ti-close"></i></button>
+            <button onclick="closeFilterSearch()" class="w3-bar-item w3-button w3-large"><i class="ti-close"></i>
+            </button>
           </div>
           <!-- Find New Property -->
           <div class="sidebar-widgets">
@@ -30,10 +31,10 @@
                   <div class="index-search">
                     <%= form_with url: realestates_path, method: :get, class: "d-flex" do |form| %>
                       <%= form.text_field :ref,
-                          class: "form-control",
-                          value: params[:ref],
-                          placeholder: "Buscar per referència"
-                        %>
+                      class: "form-control",
+                      value: params[:ref],
+                      placeholder: "Buscar per referència"
+                    %>
                       <div class="input-group-append">
                         <%= form.button class: "input-group-text index-button", value: "cercar" do %>
                           <i class="fas fa-search fa-sm"></i>
@@ -55,7 +56,7 @@
                         </h4>
                       </div>
                       <div class="widget-boxed-body collapse show" id="rstype" data-parent="#rstype">
-                      <%  else %>
+                      <% else %>
                         <div class="widget-boxed-header">
                           <h4>
                             <a href="#rstype" data-bs-toggle="collapse" aria-expanded="false" role="button"> Venda / LLoguer </a>
@@ -97,7 +98,7 @@
                           </h4>
                         </div>
                         <div class="widget-boxed-body collapse show" id="where" data-parent="#where">
-                        <%  else %>
+                        <% else %>
                           <div class="widget-boxed-header">
                             <h4>
                               <a href="#where" data-bs-toggle="collapse" aria-expanded="false" role="button" class="collapsed">On busques? </a>
@@ -283,117 +284,113 @@
                 <!-- End Property Left Sidebar -->
                 <!-- Right Side -->
                 <div class="col-lg-8 col-md-12 list-layout">
-                  <%# render "realestates", realestates: @realestates %>
-                  <%# turbo_frame_tag "realestates", data: {turbo_action: "advance" } do %>
-                    <div class="row justify-content-center">
-                      <div class="col-lg-12 col-md-12">
-                        <div class="item-shorting-box">
-                          <div class="item-shorting clearfix">
-                            <div class="left-column pull-left">
-                              <h4 class="m-0">
-                                <%# If there is only one result %>
-                                <% if params[:page].nil? && @all_realestates.count == 0  %>
-                                  No s'han trobat immobles d'aquestes caracteristiques.
-                                <% elsif params[:page].nil? && @realestates.count == 1  %>
-                                  <%= @realestates.count %> immoble
-                                  <%# If it's the first page %>
-                                <% elsif params[:page].nil? || params[:page] == 1 %>
-                                  1 - <%= @realestates.count %> de <%= @all_realestates.count %> immobles
-                                  <%# If params[:page] present and @realestates number == @pagy.items %>
-                                <% elsif params[:page].present? && @realestates.count == @pagy.items %>
-                                  <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= params[:page].to_i * @pagy.items %> de <%= @all_realestates.count %> immobles
-                                  <%# if params[:page] present and @realestates number < @pagy.items %>
-                                <% elsif params[:page].present? && @realestates.count < @pagy.items %>
-                                  <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= @all_realestates.count %> de <%= @all_realestates.count %> immobles
-                                <% end %>
-                              </h4>
-                            </div>
+                  <div class="row justify-content-center">
+                    <div class="col-lg-12 col-md-12">
+                      <div class="item-shorting-box">
+                        <div class="item-shorting clearfix">
+                          <div class="left-column pull-left">
+                            <h4 class="m-0">
+                              <%# If there is only one result %>
+                              <% if params[:page].nil? && @all_realestates.count == 0  %>
+                                No s'han trobat immobles d'aquestes caracteristiques.
+                              <% elsif params[:page].nil? && @realestates.count == 1  %>
+                                <%= @realestates.count %> immoble
+                                <%# If it's the first page %>
+                              <% elsif params[:page].nil? || params[:page] == 1 %>
+                                1 - <%= @realestates.count %> de <%= @all_realestates.count %> immobles
+                                <%# If params[:page] present and @realestates number == @pagy.items %>
+                              <% elsif params[:page].present? && @realestates.count == @pagy.items %>
+                                <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= params[:page].to_i * @pagy.items %> de <%= @all_realestates.count %> immobles
+                                <%# if params[:page] present and @realestates number < @pagy.items %>
+                              <% elsif params[:page].present? && @realestates.count < @pagy.items %>
+                                <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= @all_realestates.count %> de <%= @all_realestates.count %> immobles
+                              <% end %>
+                            </h4>
                           </div>
-                          <div class="item-shorting-box-right">
-                            <ul class="shorting-list">
-                              <li>
-                                <%= link_to index_map_realestates_path, target: "_blank" do %>
-                                  <i class="fas fa-map-marked"></i>
-                                <% end %>
-                              </li>
-                            </ul>
+                        </div>
+                        <div class="item-shorting-box-right">
+                          <ul class="shorting-list">
+                            <li>
+                              <%= link_to index_map_realestates_path, target: "_blank" do %>
+                                <i class="fas fa-map-marked"></i>
+                              <% end %>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-----------------------------Filter----------------------------->
+                  <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                      <div class="sty_1523">
+                        <div class="_mp_filter mb-3">
+                          <div>
+                            <% if params[:direction] == 'asc' %>
+                              <%= link_to request.params.merge(column: :salesprice, direction: 'desc'), class: "map_filter min" do %>
+                                <i class="fa fa-caret-down mr-2"></i>Ordenar per preu
+                              <% end %>
+                            <% elsif params[:direction] == 'desc' %>
+                              <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
+                                <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
+                              <% end %>
+                            <% else %>
+                              <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
+                                <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
+                              <% end %>
+                            <% end %>
+                            <!--Short Filter not applying for now----------------------
+                <a href="#" class="map_filter min" data-bs-toggle="modal" data-bs-target="#filter"><i class="fa fa-sliders-h mr-2"></i>Short Filter</a>
+                -----------------------Short Filter not applying for now-->
                           </div>
                         </div>
                       </div>
                     </div>
-                    <!-----------------------------Filter----------------------------->
-                    <div class="row">
-                      <div class="col-lg-12 col-md-12">
-                        <div class="sty_1523">
-                          <div class="_mp_filter mb-3">
-                            <div>
-                              <% if params[:direction] == 'asc' %>
-                                <%= link_to request.params.merge(column: :salesprice, direction: 'desc'), class: "map_filter min" do %>
-                                  <i class="fa fa-caret-down mr-2"></i>Ordenar per preu
+                    <div class="col-lg-12 col-md-12">
+                      <div class="sty_1523">
+                        <div class="_mp_filter center mb-3">
+                          <div class="_mp_filter_last">
+                            <div class="filter_list_item">
+                              <div class="selected_item_wrap">
+                                <% params.compact_blank.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
+                                  <div class="slt_single_item">
+                                    <%= link_to request.params.except(key.to_sym), class: "remove_pills" do %>
+                                      <span class="pills_tex"><%= key if key == "min" || key == "max" %> <%= value %> <%= "#{key}. o més" if key == "hab" %> </span>
+                                      <span class="remove_cross"></span>
+                                    <% end %>
+                                  </div>
                                 <% end %>
-                              <% elsif params[:direction] == 'desc' %>
-                                <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
-                                  <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
+                                <% if params.except(:action, :controller, :locale, :column, :direction, :page).values.length > 1 %>
+                                  <div class="slt_single_item">
+                                    <%= link_to realestates_path, class: "clear_pills" do %>
+                                      <span class="pills_clears">Treure tots els filtres</span>
+                                    <% end %>
+                                  </div>
                                 <% end %>
-                              <% else %>
-                                <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
-                                  <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
-                                <% end %>
-                              <% end %>
-                              <!--Short Filter not applying for now----------------------
-                        <a href="#" class="map_filter min" data-bs-toggle="modal" data-bs-target="#filter"><i class="fa fa-sliders-h mr-2"></i>Short Filter</a>
-                        -----------------------Short Filter not applying for now-->
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-lg-12 col-md-12">
-                        <div class="sty_1523">
-                          <div class="_mp_filter center mb-3">
-                            <div class="_mp_filter_last">
-                              <div class="filter_list_item">
-                                <div class="selected_item_wrap">
-                                  <% params.compact_blank.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
-                                    <div class="slt_single_item">
-                                      <%= link_to request.params.except(key.to_sym), class: "remove_pills" do %>
-                                        <span class="pills_tex"><%= key if key == "min" || key == "max" %> <%= value %> <%= "#{key}. o més" if key == "hab" %> </span>
-                                        <span class="remove_cross"></span>
-                                      <% end %>
-                                    </div>
-                                  <% end %>
-                                  <% if params.except(:action, :controller, :locale, :column, :direction, :page).values.length > 1 %>
-                                    <div class="slt_single_item">
-                                      <%= link_to realestates_path, class: "clear_pills" do %>
-                                        <span class="pills_clears">Treure tots els filtres</span>
-                                      <% end %>
-                                    </div>
-                                  <% end %>
-                                </div>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <!-----------------------------End Filter----------------------------->
-                    <!-- Tots els immobles -->
-                    <div class="row">
-                      <% @realestates.each do |realestate| %>
-                        <%= render realestate %>
-                      <% end %>
-                    </div>
-                    <!-- End Tots els immobles -->
-                    <!-- Pagination -->
-                    <div class="d-flex justify-content-center">
-                      <%== pagy_bootstrap_nav(@pagy) %>
-                    </div>
-                    <!-- End Pagination -->
-                    <%# end %>
                   </div>
-                  <!-- End Right Side -->
+                  <!-----------------------------End Filter----------------------------->
+                  <!-- Tots els immobles -->
+                  <div class="row">
+                    <% @realestates.each do |realestate| %>
+                      <%= render realestate %>
+                    <% end %>
+                  </div>
+                  <!-- End Tots els immobles -->
+                  <!-- Pagination -->
+                  <div class="d-flex justify-content-center">
+                    <%== pagy_bootstrap_nav(@pagy) %>
+                  </div>
+                  <!-- End Pagination -->
                 </div>
+                <!-- End Right Side -->
               </div>
-            </section>
-            <!-- ============================ End Properties ================================== -->
-            <%# render partial: "shared/filter_modal" %>
-            <%= @realestate_bedrooms %> <br>
+            </div>
+          </section>
+          <!-- ============================ End Properties ================================== -->
+          <%# render partial: "shared/filter_modal" %>
