--- a/app/assets/stylesheets/components/_global.scss
+++ b/app/assets/stylesheets/components/_global.scss
@@ -92,7 +92,7 @@ p {
 }
 
 .gray-bg {
-  background: #f7f9fc, image-url("pattern.png");
+  background: #f7f9fc;
   background-size: cover;
   background-position: center;
 }
