--- a/app/assets/stylesheets/components/_property.scss
+++ b/app/assets/stylesheets/components/_property.scss
@@ -820,7 +820,7 @@ span.tag_t {
   top: 2px;
   right: -23px;
   max-width: 100%;
-  background-image: image-url("check-mark.png");
+  // background-image: image-url("check-mark.png");
   background-size: contain;
   object-fit: cover;
 }
