--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,6 +4,7 @@
 /*---------- Call To Action -------------------*/
 .call-to-act-wrap {
   padding: 50px 0;
+  position: relative;
 }
 .call-to-act {
   width: 100%;
