--- a/app/views/realestates/index_map.html.erb
+++ b/app/views/realestates/index_map.html.erb
@@ -1,4 +1,16 @@
-			<!-- ============================ Hero Banner  Start================================== -->
+<!-- ============================ Page Title Start================================== -->
+<div class="page-title">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <% if @towns %>
+          <h4 class="ipt-title">Immobles a <%= @towns.join(', ') %></h4>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ============================ Page Title End ================================== --><!-- ============================ Hero Banner  Start================================== -->
 <div class="home-map-banner half-map">
   <div class="fs-left-map-box">
     <div class="home-map fl-wrap">
